1. Метод .of [#371481]